<resources>
    <string name="app_name">Register ZVent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_init_button">Iniciar</string>
    <string name="about_init_screen">Acerca de</string>
    <string name="home_button">Inicio</string>
    <string name="registry_result_title">Registro</string>
    <string name="result_reset_button">Reiniciar</string>
    <string name="see_guests_result_button_text">Ver invitados</string>
    <string name="about_app_title">Register Zevent</string>
    <string name="about_app_content">Register Zevent es una aplicación dedicada a la administración de invitados para todo evento privado.</string>
    <string name="share">Share</string>
    <string name="contact">Contacto:</string>
    <string name="name_contact">Zvent Register App</string>
    <string name="email_contact">support@zvent.com</string>
    <string name="invited">Invitados</string>
    <string name="fab_description">Agregar Invitados</string>
    <string name="insert_name">Ingrese el nombre</string>
    <string name="insert_phone">Ingrese el teléfono</string>
    <string name="insert_email">Ingrese el correo electrónico</string>
    <string name="invited_format">Invitados: %s</string>
    <string name="registered_format">Registrados: %s</string>
    <string name="insert_description">Ingrese la desripción</string>
    <string name="select_order">Seleccione el orden</string>
    <string name="roles">Roles</string>
    <string name="select_role">Seleccione el rol</string>
    <string name="phone_format">Telefono: %s</string>
    <string name="email_format">Email: %s</string>
    <string name="role_name_format">Rol: %s</string>
    <string name="role_description_format">Descripcion: %s</string>
    <string name="role_order_format">Orden: %s</string>
    <string name="guest_name_format">Nombre: %s</string>


</resources>
