<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.AddguestsFragment">
    <data>
        <variable
            name="addGuestViewModel"
            type="com.example.registerzvent.views.addguests.AddguestsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_text_field"
            android:layout_width="297dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/insert_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.159" />

        <EditText
            android:id="@+id/phone_text_field"
            android:layout_width="297dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/insert_phone"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_field" />

        <EditText
            android:id="@+id/email_text_field"
            android:layout_width="297dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/insert_email"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_text_field" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="198dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:entries="@{addGuestViewModel.listadoRoles}"
            android:spinnerMode="dropdown"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="146dp"
            android:layout_height="22dp"
            android:layout_marginTop="24dp"
            android:text="@string/select_role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_field" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>